Prototip/Radian.ebnf
(* ================================================================== *)
(*  Radian — Canonical BNF Grameri                                    *)
(*  Versiyon: 0.4                                                      *)
(*                                                                    *)
(*  Gösterim:                                                         *)
(*    { x }   → x sıfır veya daha fazla kez                          *)
(*    [ x ]   → x opsiyonel (sıfır ya da bir kez)                    *)
(*    ( x )   → gruplama                                              *)
(*    x | y   → x ya da y                                            *)
(*    "..."   → terminal sembol (token değeri)                        *)
(*    T_*     → lexer token tipi                                      *)
(*                                                                    *)
(*  Bu dosya parser.py ile bire bir tutulur. Kod ile ayrıştığında     *)
(*  doğru kabul edilen parser.py'dir; bu dosya güncellenmelidir.      *)
(* ================================================================== *)


(* ------------------------------------------------------------------ *)
(*  PROGRAM                                                            *)
(* ------------------------------------------------------------------ *)

Program         = { TopLevel }

TopLevel        = Statement

(*
  FuncDef ayrımı Statement içinde yapılır (_is_funcdef_ahead), böylece
  fonksiyon tanımı blok içinde de geçerlidir (iç fonksiyon / closure).
*)


(* ------------------------------------------------------------------ *)
(*  STATEMENT                                                          *)
(* ------------------------------------------------------------------ *)

Statement       = FuncDef
                | StructDef
                | "return" [ Expression ] ";"
                | "break" ";"
                | "continue" ";"
                | Expression [ ";" ]

(*
  ";" yalnızca gövdesi blokla biten ifadelerde (if / while / for / blok)
  opsiyoneldir; diğer tüm ifadelerde zorunludur.

    if x { 1; }        (* ";" gerekmez *)
    r = if x { 1; };   (* ifade atamanın parçası → ";" gerekli *)

  Ayrıca: bir Statement blokla biten bir yapıyla BAŞLIYORSA orada biter,
  operatör zinciri sürdürülmez. Aksi halde

    while i < 3 { i++; }
    -1;

  ikinci satır ilkine bağlanıp (while …) - 1 olarak okunurdu.
*)


(* ------------------------------------------------------------------ *)
(*  FONKSİYON                                                          *)
(* ------------------------------------------------------------------ *)

FuncDef         = T_IDENTIFIER [ FuncSignature ] Block

(*
  Geçerli formlar:

    1) Sadece gövde (parametresiz; imza ayrıca bildirilmiş olabilir):
         topla { result = x + y; result; }

    2) Satır içi imza + gövde (tam tanım):
         topla (x:i32, y:i32) -> i32 {
             result = x + y;
             result;
         }

    3) Sadece imza bildirimi — Statement olarak:
         topla : (x:i32, y:i32) -> i32;

  FuncDef / çağrı ayrımı (parser lookahead):
    IDENTIFIER + "{"                        → FuncDef (form 1)
    IDENTIFIER + "(" … ")" + "->"           → FuncDef (form 2)
    diğer (örn. IDENTIFIER + "(" … ")" )    → çağrı ifadesi
*)

FuncSignature   = "(" [ TypeParamList ] ")" "->" TypeExpr


(* ------------------------------------------------------------------ *)
(*  KAYIT TİPİ (STRUCT)                                                *)
(* ------------------------------------------------------------------ *)

StructDef       = "struct" T_IDENTIFIER "(" [ TypeParamList ] ")" ";"

(*
  Alan listesi fonksiyon imzasıyla aynı dilbilgisini kullanır; alan adı
  zorunludur ve yinelenemez. Yapı adı hem bir tip hem de kurucu fonksiyondur:

    struct Nokta (x:i32, y:i32);
    p = Nokta(3, 4);        (* kurucu — alan sayısı ve tipleri denetlenir *)
    p.x;                    (* alan okuma *)
    p.y = 9;                (* alan yazma — tipi denetlenir *)
    q : Nokta = p;          (* yapı adı tip konumunda da geçerli *)

  Yapılar referans değerdir; eşitlik aynı yapı tipi + alan alan karşılaştırma.
*)


(* ------------------------------------------------------------------ *)
(*  BLOK                                                               *)
(* ------------------------------------------------------------------ *)

Block           = "{" { Statement } "}"

(*
  - Son Statement'ın değeri blokun değeridir (implicit return).
  - Boş blok "{}" → unit.
  - Her blok yeni bir kapsam açar; "=" değişkeni kapsam zincirinde arar,
    bulamazsa geçerli kapsamda tanımlar.
  - Blok hem fonksiyon gövdesi hem değer (Primary) olarak kullanılabilir:
      r = { a = 1; a + 2; };   (* r = 3 *)
*)


(* ------------------------------------------------------------------ *)
(*  İFADE HİYERARŞİSİ  (düşük → yüksek öncelik)                      *)
(* ------------------------------------------------------------------ *)

Expression      = Assign

(*
  Assign — sağ-çağrışımlı, lvalue döndürür
  ──────────────────────────────────────────
    a = b         → b'yi a'ya ata, a'yı döndür
    a = b = c     → ASSIGN( a, ASSIGN(b, c) )      sağ-çağrışımlı
    (a = b) + 2   → a'ya b atanır, sonuç a+2        parantez ile lvalue kullanımı
    a += 1        → ASSIGN:"+=" (a, 1) ≡ a = a + 1
*)
Assign          = TypeBind [ AssignOp Assign ]

AssignOp        = "=" | "+=" | "-=" | "*=" | "/=" | "%="
                | "**=" | "<<=" | ">>=" | "&=" | "|=" | "^="

(*
  TypeBind — sağ-çağrışımlı, lvalue döndürür
  ────────────────────────────────────────────
  ":" tip bağlar ve sol tarafı (lvalue) döndürür.
  Sağ taraf her zaman TypeExpr'dir; Expression değil.

    b : i32            → b'yi i32'ye bağla, b'yi döndür
    a : i32 = b        → ASSIGN( TYPEBIND(a, i32), b )
    a = b : i32        → ASSIGN( a, TYPEBIND(b, i32) )
*)
TypeBind        = Binary [ ":" TypeExpr ]

(*
  Binary — öncelik katmanlı (parser.py: BINARY_LEVELS)
  ─────────────────────────────────────────────────────
  Binary(n)   = Binary(n+1) { Op(n) Binary(n+1) }     sol-çağrışımlı
  Binary(son) = Unary

  Katmanlar (düşük → yüksek):

    0   ||                       (özel/tabloda olmayan semboller de burada)
    1   &&
    2   |
    3   ^
    4   &
    5   ==  !=
    6   <   >   <=  >=
    7   <<  >>
    8   +   -
    9   *   /   %
    10  **                        (sağ-çağrışımlı)

  "=" ve ":" bu katmanlara düşmez; üst kurallarda yakalanır.
*)
Binary          = BinaryLevel0

(*
  Unary — önek tekli operatör
  ────────────────────────────
    -5      →  UNARY_OP( -, 5 )
    !flag   →  UNARY_OP( !, flag )
    -(x+1)  →  UNARY_OP( -, BINARY(x,+,1) )
*)
Unary           = ( "++" | "--" ) Unary            (* önek artırma/azaltma *)
                | [ UnaryOp ] Unary
                | Term

(*
  Term — postfix zinciri
  ───────────────────────
  Çağrı, üye erişimi ve indeksleme soldan sağa zincirlenir:
    f(x)(y)      →  CALL( CALL(f, x), y )
    a.b.c        →  MEMBER:c( MEMBER:b(a) )
    obj.xs[0](z) →  CALL( INDEX( MEMBER:xs(obj), 0 ), z )
*)
Term            = Primary { CallSuffix | MemberSuffix | IndexSuffix }
                  [ "++" | "--" ]                  (* sonek artırma/azaltma *)

(*
  "++" / "--" yalnızca bir lvalue'ya (IDENTIFIER ya da INDEX) uygulanabilir;
  aksi halde sözdizimi hatasıdır. Önek biçimi yeni değeri, sonek biçimi eski
  değeri döndürür. Bunlar binary operatör DEĞİLDİR: "a ++ b" geçersizdir.
*)

CallSuffix      = "(" [ ArgumentList ] ")"
MemberSuffix    = "." T_IDENTIFIER
IndexSuffix     = "[" Expression "]"

ArgumentList    = Expression { "," Expression }

Primary         = "(" Expression ")"
                | Block
                | ArrayLiteral
                | MapLiteral
                | ImportExpr
                | IfExpr
                | WhileExpr
                | ForExpr
                | Literal

ArrayLiteral    = "[" [ Expression { "," Expression } [ "," ] ] "]"

MapLiteral      = "#" "[" [ MapEntry { "," MapEntry } [ "," ] ] "]"
MapEntry        = Binary ":" Expression

(*
  Harita literali "{" ile yazılamaz: "{" blok başlatır ve "{a: T}" biçimi
  TypeBind ile çakışır. Bu yüzden ayrı bir açılış işareti kullanılır.

    #[]                        (* boş harita *)
    #["a": 1, "b": 2]
    #[1: "bir", 2.5: "iki"]    (* anahtar sayı da olabilir *)

  Anahtar Binary seviyesinde okunur — aksi halde ":" TypeBind sanılırdı.
  Anahtar str, int ya da float olmalıdır; bool anahtar yasaktır (Radian'da
  1 == true yanlıştır, oysa aynı sözlük anahtarına düşerlerdi).
*)


(* ------------------------------------------------------------------ *)
(*  AKIŞ DENETİMİ  (hepsi birer ifadedir — değer döndürürler)         *)
(* ------------------------------------------------------------------ *)

ImportExpr      = "import" Unary

(*
  `import` bir ifadedir ve modül değeri döndürür:

    geo = import "lib/geometri.rad";
    geo.daire_alani(2.0);

  - Yol, import eden dosyanın dizinine göre çözülür (CLI dosya çalıştırırken
    o dosyanın dizinini kök alır).
  - Bir dosya bir kez çalıştırılır; sonuç gerçek yola göre önbelleğe alınır.
  - Modül kendi kapsamında çalışır; üst düzey tanımlarının tümü dışarıdan
    `modül.ad` biçiminde görünür. Döngüsel import hatadır.
*)


IfExpr          = "if" Expression Block [ "else" ( IfExpr | Block ) ]

(*
  Değeri seçilen dalın blok değeridir; else dalı yoksa ve koşul yanlışsa
  unit döner. Koşul kesin olarak bool olmalıdır (truthy dönüşümü yoktur).

    r = if x > 0 { 1; } else { -1; };
*)

WhileExpr       = "while" Expression Block

(*
  Değeri son çalışan yinelemenin gövde değeridir; hiç çalışmazsa unit.
*)

ForExpr         = "for" T_IDENTIFIER "in" Expression Block

(*
  Dizi ya da string üzerinde gezer. Döngü değişkeni her yinelemede yeni
  bir kapsamda tanımlanır ve döngüden sonra görünmez.
*)


(* ------------------------------------------------------------------ *)
(*  TİP DİLİ  (Expression'dan bağımsız, yalnızca ":" sağında)        *)
(* ------------------------------------------------------------------ *)

(*
  TypeExpr — sağ-çağrışımlı
  ──────────────────────────
  "->" fonksiyon tipi oluşturur; currying doğal olarak desteklenir.

    i32
    [i32]
    (x:i32, y:i32) -> i32
    (x:i32) -> (y:i32) -> bool    →    (x:i32) -> ((y:i32) -> bool)
*)
TypeExpr        = TupleTypeExpr "->" TypeExpr
                | TupleTypeExpr

TupleTypeExpr   = "(" [ TypeParamList ] ")"
                | "[" TypeExpr "]"                 (* dizi tipi *)
                | T_IDENTIFIER

TypeParamList   = TypeParam { "," TypeParam }

(*
  TypeParam — isimli veya isimsiz
  ────────────────────────────────
    x : i32     →  isimli   (fonksiyon tanımında zorunlu)
    i32         →  isimsiz  (yalnızca tip bildiriminde)
*)
TypeParam       = T_IDENTIFIER ":" TypeExpr
                | TypeExpr


(* ------------------------------------------------------------------ *)
(*  OPERATÖRLER                                                        *)
(* ------------------------------------------------------------------ *)

(*
  Lexer çok karakterli sembolleri symbols.txt'den yükler ve tek token
  üretir (örn: "->", "==", "+=", "**", "::"). Parser bitişik sembolleri
  BİRLEŞTİRMEZ: bir operatör tam olarak bir T_SYMBOL token'ıdır.
  Yeni operatör = symbols.txt'e bir satır (öncelik tablosunda yoksa
  en düşük binary seviyeye düşer).
*)

Operator        = T_SYMBOL
UnaryOp         = "-" | "+" | "!" | "~"
IncDecOp        = "++" | "--"


(* ------------------------------------------------------------------ *)
(*  LİTERAL                                                            *)
(* ------------------------------------------------------------------ *)

Literal         = T_STRING
                | T_CHAR
                | T_NUMBER
                | T_IDENTIFIER
                | "true" | "false"
                | PrimitiveType

PrimitiveType   = "i8"  | "i16" | "i32" | "i64"
                | "u8"  | "u16" | "u32" | "u64"
                | "f32" | "f64"
                | "bool"| "char"

(*
  "str" ve "map" birer tip adıdır ama PrimitiveType listesinde değildirler:
  ifade konumunda `str(...)` / `map(...)` fonksiyonları olarak çözülürler.
*)


(* ------------------------------------------------------------------ *)
(*  ANAHTAR SÖZCÜKLER                                                  *)
(* ------------------------------------------------------------------ *)

(*
  if  else  while  for  in  return  break  continue  true  false  struct
  import

  Lexer bunları T_IDENTIFIER olarak üretir; ayrımı parser yapar.
  Değişken adı olarak kullanılamazlar ("true"/"false" birer literaldir).
*)


(* ------------------------------------------------------------------ *)
(*  YORUMLAR                                                           *)
(* ------------------------------------------------------------------ *)

(*
  // satır sonuna kadar
  /* blok — iç içe geçmez */

  Yorumlar lexer seviyesinde tamamen atılır; parser'a token ulaşmaz.
*)


(* ------------------------------------------------------------------ *)
(*  TERMİNATÖRLER  (operatör veya unary başlatamaz)                   *)
(* ------------------------------------------------------------------ *)

(*
  ; ( ) { } [ ] ,   →  expression / tip / blok sınırları
  = : ve bileşik atamalar → Assign ve TypeBind tarafından ayrı yakalanır
*)


(* ================================================================== *)
(*  ÖNCELIK TABLOSU  (düşük → yüksek)                                 *)
(*                                                                    *)
(*   Seviye  Kural       Sembol             Çağrışım                  *)
(*   ──────  ─────────   ──────────────     ─────────                 *)
(*     1     Assign      = += -= …          Sağ                       *)
(*     2     TypeBind    :                  Sağ   (sağ → TypeExpr)    *)
(*     3     Binary      11 katman (bkz.)   Sol   ("**" sağ)          *)
(*     4     Unary       - + ! ~            —     (önek)              *)
(*     4     IncDec      ++ --              —     (önek ve sonek)     *)
(*     5     Term        f(x) a.b a[i]      Sol   (postfix zinciri)   *)
(*     6     Primary     () {} [] literal   —                         *)
(*     —     TypeExpr    ->                 Sağ   (yalnızca : sağında)*)
(* ================================================================== *)
