Prototip/parser.py
from enum import Enum, auto
from lexer import Token, TokenType, lexer


# ---------------------------------------------------------------------------
# NodeType
# ---------------------------------------------------------------------------

class NodeType(Enum):
    PROGRAM    = auto()  # Kök düğüm — { TopLevel }
    STATEMENT  = auto()  # Expression ";"
    FUNC_DEF   = auto()  # IDENTIFIER [ FuncSignature ] Block
    BLOCK      = auto()  # "{" { Statement } "}"  — son stmt değeri döner
    FUNC_TYPE  = auto()  # "(" TypeParamList ")" "->" TypeExpr
    TUPLE_TYPE = auto()  # "(" TypeParamList ")"  — ok tipi öncesi
    TYPE_PARAM = auto()  # [IDENTIFIER ":"] TypeExpr
    ASSIGN     = auto()  # lhs AssignOp rhs   → lvalue döndürür
    TYPEBIND   = auto()  # lhs ":" TypeExpr → lvalue döndürür
    BINARY_OP  = auto()  # Unary Operator Unary  — öncelik katmanlı
    UNARY_OP   = auto()  # UnaryOp Term
    OPERATOR   = auto()  # Operatör düğümü (value = token)
    LITERAL    = auto()  # Sayı / string / char / bool / PrimitiveType sembolü
    IDENTIFIER = auto()  # Kullanıcı tanımlı isim

    # --- 0.2 yaması: çağrı ---
    CALL       = auto()  # children[0] = çağrılan, children[1:] = argümanlar

    # --- 0.4 yaması: artırma/azaltma ---
    PRE_OP     = auto()  # value = "++"/"--", children = [hedef]  →  ++x
    POST_OP    = auto()  # value = "++"/"--", children = [hedef]  →  x++

    # --- 0.3 yaması: postfix erişim, dizi, akış denetimi ---
    MEMBER     = auto()  # value = üye adı, children = [nesne]        →  a.b
    INDEX      = auto()  # children = [nesne, indeks]                 →  a[i]
    ARRAY      = auto()  # children = elemanlar                       →  [1, 2]
    IF         = auto()  # children = [koşul, then-Block, else?]
    WHILE      = auto()  # children = [koşul, gövde-Block]
    FOR        = auto()  # value = döngü değişkeni, children = [dizi, gövde]
    RETURN     = auto()  # children = [ifade?]
    BREAK      = auto()  # —
    CONTINUE   = auto()  # —


# ---------------------------------------------------------------------------
# Sabitler
# ---------------------------------------------------------------------------

PRIMITIVE_TYPES = {
    "i8",  "i16", "i32", "i64",
    "u8",  "u16", "u32", "u64",
    "f32", "f64", "bool", "char",
}

# Bu değerler operatör veya unary başlatamaz
TERMINATORS = {";", "(", ")", "{", "}", "[", "]", ","}

# Anahtar sözcükler — lexer bunları LITERAL_IDEN üretir, ayrım parser'da yapılır.
KEYWORDS = {
    "if", "else", "while", "for", "in",
    "return", "break", "continue",
    "true", "false",
}

# Değer üreten anahtar sözcükler (LITERAL düğümü olurlar)
KEYWORD_LITERALS = {"true", "false"}

# Atama operatörleri — Assign katmanında yakalanır, Binary'ye düşmez.
# "op=" biçimindekiler yorumlayıcıda `a = a op b` olarak çözülür.
ASSIGN_OPS = {"=", "+=", "-=", "*=", "/=", "%=", "**=", "<<=", ">>=", "&=", "|=", "^="}

# Önek (unary) operatörleri
UNARY_OPS = {"-", "+", "!", "~"}

# Artırma / azaltma — hem önek hem sonek; binary operatör değildirler.
INCDEC_OPS = {"++", "--"}

# ++ / -- yalnızca bu düğümlere uygulanabilir (lvalue)
LVALUE_TYPES = {NodeType.IDENTIFIER, NodeType.INDEX}

# Binary operatör öncelik katmanları — index 0 en düşük öncelik.
# symbols.txt'e eklenen ama burada yer almayan semboller "özel operatör"
# sayılır ve en düşük binary seviyeye (CUSTOM_LEVEL) düşer.
BINARY_LEVELS: list[set[str]] = [
    {"||"},                          # 0  mantıksal VEYA
    {"&&"},                          # 1  mantıksal VE
    {"|"},                           # 2  bit VEYA
    {"^"},                           # 3  bit XOR
    {"&"},                           # 4  bit VE
    {"==", "!="},                    # 5  eşitlik
    {"<", ">", "<=", ">="},          # 6  karşılaştırma
    {"<<", ">>"},                    # 7  kaydırma
    {"+", "-"},                      # 8  toplama / çıkarma
    {"*", "/", "%"},                 # 9  çarpma / bölme / mod
    {"**"},                          # 10 üs alma  (sağ çağrışımlı)
]

CUSTOM_LEVEL = 0                                   # tabloda olmayan semboller
RIGHT_ASSOC_LEVELS = {len(BINARY_LEVELS) - 1}      # yalnızca "**"

# Gövdesi blokla biten ifadeler — statement sonunda ";" opsiyoneldir.
BLOCK_TAILED = {NodeType.IF, NodeType.WHILE, NodeType.FOR, NodeType.BLOCK}


# ---------------------------------------------------------------------------
# AST Node
# ---------------------------------------------------------------------------

class Node:
    def __init__(self, type: NodeType, value: Token | None = None):
        self.type:     NodeType      = type
        self.value:    Token | None  = value
        self.children: list["Node"] = []          # instance değişkeni — paylaşım yok

    def add(self, child: "Node") -> "Node":
        self.children.append(child)
        return self

    def __repr__(self, indent: int = 0) -> str:
        pad = "  " * indent
        val = f" {self.value.value!r}" if self.value else ""
        s   = f"{pad}[{self.type.name}]{val}\n"
        for child in self.children:
            s += child.__repr__(indent + 1)
        return s


# ---------------------------------------------------------------------------
# ParseError
# ---------------------------------------------------------------------------

class ParseError(Exception):
    def __init__(self, msg: str, token: Token | None = None):
        loc = f" [{token.line}:{token.column}]" if token else ""
        super().__init__(f"{msg}{loc}")
        self.token = token


# ---------------------------------------------------------------------------
# Parser
# ---------------------------------------------------------------------------

class Parser:
    """
    Recursive descent parser.

    Her gramer kuralı bir _parse_* metoduna karşılık gelir.
    Yeni kural eklemek için:
      1. NodeType'a değer ekle.
      2. _parse_* metodunu yaz.
      3. Uygun üst kuraldan çağır.
    """

    def __init__(self, tokens: list[Token]):
        self.tokens: list[Token] = [t for t in tokens
                                     if t.type != TokenType.WS]
        self.pos:  int  = 0
        self.root: Node = Node(NodeType.PROGRAM)

    # ------------------------------------------------------------------
    # Temel yardımcılar
    # ------------------------------------------------------------------

    def peek(self, offset: int = 0) -> Token | None:
        i = self.pos + offset
        return self.tokens[i] if i < len(self.tokens) else None

    def current(self) -> Token | None:
        return self.peek(0)

    def advance(self) -> Token:
        tok = self.tokens[self.pos]
        self.pos += 1
        return tok

    def expect(self, value: str) -> Token:
        tok = self.current()
        got = tok.value if tok else "EOF"
        if got != value:
            raise ParseError(f"'{value}' beklendi, '{got}' bulundu", tok)
        return self.advance()

    def match(self, *values: str) -> bool:
        tok = self.current()
        return tok is not None and tok.value in values

    def match_type(self, *types: TokenType) -> bool:
        tok = self.current()
        return tok is not None and tok.type in types

    def match_keyword(self, *words: str) -> bool:
        """Geçerli token bu anahtar sözcüklerden biri mi?"""
        tok = self.current()
        return (tok is not None
                and tok.type == TokenType.LITERAL_IDEN
                and tok.value in words)

    # ------------------------------------------------------------------
    # Program = { TopLevel }
    # ------------------------------------------------------------------

    def parse(self) -> Node:
        while self.current() is not None:
            self.root.add(self._parse_toplevel())
        return self.root

    # ------------------------------------------------------------------
    # TopLevel = FuncDef | Statement
    #
    # Ayrım _parse_statement içinde (_is_funcdef_ahead) yapılır; böylece
    # fonksiyon tanımı blok içinde de (iç fonksiyon) geçerlidir.
    # ------------------------------------------------------------------

    def _parse_toplevel(self) -> Node:
        return self._parse_statement()

    # ------------------------------------------------------------------
    # FuncDef = IDENTIFIER [ FuncSignature ] Block
    #
    # Geçerli formlar:
    #   topla { ... }
    #   topla (x:i32, y:i32) -> i32 { ... }
    # ------------------------------------------------------------------

    def _parse_funcdef(self) -> Node:
        name_tok = self.advance()                        # IDENTIFIER
        node     = Node(NodeType.FUNC_DEF, name_tok)

        # Satır içi imza varsa parse et
        if self.match("("):
            node.add(self._parse_funcsig())

        node.add(self._parse_block())
        return node

    def _is_funcdef_ahead(self) -> bool:
        """
        Fonksiyon tanımı mı yoksa ifade mi?

          topla { ... }                → FuncDef  (IDENT + "{")
          topla (x:i32) -> i32 { ... } → FuncDef  (IDENT + "(" … ")" + "->")
          topla(x, y);                 → çağrı ifadesi ("->" yok)
        """
        tok = self.current()
        nxt = self.peek(1)

        if (tok is None or nxt is None
                or tok.type != TokenType.LITERAL_IDEN
                or tok.value in KEYWORDS):
            return False

        if nxt.value == "{":
            return True

        if nxt.value == "(":
            close = self._matching_paren(self.pos + 1)
            after = self.peek(close - self.pos + 1) if close is not None else None
            return after is not None and after.value == "->"

        return False

    def _matching_paren(self, open_index: int) -> int | None:
        """open_index'teki '(' ile eşleşen ')' token'ının indeksini döndürür."""
        depth = 0
        i     = open_index
        while i < len(self.tokens):
            value = self.tokens[i].value
            if value == "(":
                depth += 1
            elif value == ")":
                depth -= 1
                if depth == 0:
                    return i
            i += 1
        return None

    # ------------------------------------------------------------------
    # FuncSignature = "(" [ TypeParamList ] ")" "->" TypeExpr
    #
    # Örnek: (x:i32, y:i32) -> i32
    # ------------------------------------------------------------------

    def _parse_funcsig(self) -> Node:
        node = Node(NodeType.FUNC_TYPE)
        self.expect("(")

        if not self.match(")"):
            node.add(self._parse_type_param())
            while self.match(","):
                self.advance()
                node.add(self._parse_type_param())

        self.expect(")")
        arrow_tok  = self.expect("->")
        node.value = arrow_tok                           # "->" token'ı value'da

        ret_wrapper = Node(NodeType.TYPE_PARAM)          # dönüş tipi — isimsiz
        ret_wrapper.add(self._parse_type_expr())
        node.add(ret_wrapper)
        return node

    # ------------------------------------------------------------------
    # Block = "{" { Statement } "}"
    #
    # Son statement'ın değeri blokun değeridir (implicit return).
    # Boş blok → unit / void.
    # ------------------------------------------------------------------

    def _parse_block(self) -> Node:
        open_tok = self.expect("{")
        node = Node(NodeType.BLOCK)
        while not self.match("}"):
            if self.current() is None:
                raise ParseError("Kapatılmamış blok; '}' beklendi", open_tok)
            node.add(self._parse_statement())
        self.expect("}")
        return node

    # ------------------------------------------------------------------
    # Statement = FuncDef
    #           | "return" [ Expression ] ";"
    #           | "break" ";"
    #           | "continue" ";"
    #           | Expression [ ";" ]
    #
    # ";" yalnızca gövdesi blokla biten ifadelerde (if/while/for/blok)
    # opsiyoneldir; diğer tüm ifadelerde zorunludur.
    # ------------------------------------------------------------------

    def _parse_statement(self) -> Node:
        if self._is_funcdef_ahead():
            return self._parse_funcdef()

        if self.match_keyword("return"):
            return self._wrap_statement(self._parse_return())

        if self.match_keyword("break", "continue"):
            tok  = self.advance()
            ntype = NodeType.BREAK if tok.value == "break" else NodeType.CONTINUE
            node = Node(ntype, tok)
            self.expect(";")
            return self._wrap_statement(node, terminated=True)

        expr = self._parse_expression()
        if expr.type in BLOCK_TAILED:
            if self.match(";"):                          # ";" serbest ama zorunlu değil
                self.advance()
            return self._wrap_statement(expr, terminated=True)

        self.expect(";")
        return self._wrap_statement(expr, terminated=True)

    def _wrap_statement(self, expr: Node, terminated: bool = False) -> Node:
        if not terminated:
            self.expect(";")
        node = Node(NodeType.STATEMENT)
        node.add(expr)
        return node

    # ------------------------------------------------------------------
    # ReturnStmt = "return" [ Expression ] ";"
    # ------------------------------------------------------------------

    def _parse_return(self) -> Node:
        tok  = self.advance()                            # "return"
        node = Node(NodeType.RETURN, tok)
        if not self.match(";"):
            node.add(self._parse_expression())
        return node

    # ------------------------------------------------------------------
    # Expression = Assign
    # ------------------------------------------------------------------

    def _parse_expression(self) -> Node:
        return self._parse_assign()

    # ------------------------------------------------------------------
    # Assign = TypeBind [ AssignOp Assign ]
    #
    # Sağ-çağrışımlı — lvalue döndürür.
    #   a = b = c     →   ASSIGN(a, ASSIGN(b, c))
    #   a += 1        →   ASSIGN:'+=' (a, 1)  — yorumlayıcı a = a + 1 yapar
    # ------------------------------------------------------------------

    def _parse_assign(self) -> Node:
        left = self._parse_typebind()
        tok  = self.current()
        if tok is not None and tok.value in ASSIGN_OPS:
            op_tok = self.advance()
            right  = self._parse_assign()                # sağ-çağrışımlı
            node   = Node(NodeType.ASSIGN, op_tok)
            node.add(left).add(right)
            return node
        return left

    # ------------------------------------------------------------------
    # TypeBind = Binary [ ":" TypeExpr ]
    #
    # Sağ-çağrışımlı — lvalue döndürür.
    # ":" sağında expression değil, tip dili geçerlidir.
    # ------------------------------------------------------------------

    def _parse_typebind(self) -> Node:
        left = self._parse_binary()
        if self.match(":"):
            op_tok = self.advance()
            right  = self._parse_type_expr()             # tip dili katmanı
            node   = Node(NodeType.TYPEBIND, op_tok)
            node.add(left).add(right)
            return node
        return left

    # ------------------------------------------------------------------
    # Binary — BINARY_LEVELS tablosuna göre katmanlı
    #
    #   Binary(n) = Binary(n+1) { Op(n) Binary(n+1) }      sol-çağrışımlı
    #   Binary(son) = Unary
    #
    # "**" sağ-çağrışımlıdır (RIGHT_ASSOC_LEVELS).
    # "=" ve ":" bu katmanlara düşmez; üst kurallarda yakalanır.
    # ------------------------------------------------------------------

    def _parse_binary(self, level: int = 0) -> Node:
        if level >= len(BINARY_LEVELS):
            return self._parse_unary()

        left = self._parse_binary(level + 1)

        while self._operator_level() == level:
            op = self._parse_operator()
            if level in RIGHT_ASSOC_LEVELS:
                right = self._parse_binary(level)        # sağ-çağrışım
            else:
                right = self._parse_binary(level + 1)
            node = Node(NodeType.BINARY_OP)
            node.add(left).add(op).add(right)
            left = node
            if level in RIGHT_ASSOC_LEVELS:
                break
        return left

    # ------------------------------------------------------------------
    # Unary = ( "++" | "--" ) Unary          — önek artırma/azaltma
    #       | [ UnaryOp ] Unary
    #       | Term
    #
    # UnaryOp ∈ UNARY_OPS ve ardından bir Term başlamalı.
    # ------------------------------------------------------------------

    def _parse_unary(self) -> Node:
        if self.match(*INCDEC_OPS):
            op_tok = self.advance()
            target = self._parse_unary()
            self._require_lvalue(target, op_tok)
            node = Node(NodeType.PRE_OP, op_tok)
            node.add(target)
            return node

        if self._is_unary_operator():
            op_tok  = self.advance()
            op_node = Node(NodeType.OPERATOR, op_tok)
            operand = self._parse_unary()                # -(-x) zincirlenebilir
            node    = Node(NodeType.UNARY_OP)
            node.add(op_node).add(operand)
            return node
        return self._parse_term()

    # ------------------------------------------------------------------
    # Term = Primary { CallSuffix | MemberSuffix | IndexSuffix }
    #
    #   f(x)      → CALL(f, x)
    #   a.b       → MEMBER:b(a)
    #   a[i]      → INDEX(a, i)
    #   f(x)(y)   → CALL(CALL(f, x), y)      currying doğal çalışır
    #   a.b[0](c) → zincir soldan sağa
    # ------------------------------------------------------------------

    def _parse_term(self) -> Node:
        node = self._parse_primary()

        while True:
            if self.match("("):
                node = self._parse_call(node)
            elif self.match("."):
                node = self._parse_member(node)
            elif self.match("["):
                node = self._parse_index(node)
            elif self.match(*INCDEC_OPS):
                op_tok = self.advance()
                self._require_lvalue(node, op_tok)
                post = Node(NodeType.POST_OP, op_tok)
                post.add(node)
                return post                          # zincir burada biter
            else:
                break
        return node

    def _require_lvalue(self, node: Node, op_tok: Token) -> None:
        """'++' / '--' hedefi değişken ya da dizi elemanı olmalıdır."""
        if node.type not in LVALUE_TYPES:
            raise ParseError(
                f"'{op_tok.value}' yalnızca değişken ya da dizi elemanına "
                f"uygulanabilir", op_tok)

    # ------------------------------------------------------------------
    # Primary = "(" Expression ")"
    #         | Block | IfExpr | WhileExpr | ForExpr | ArrayLiteral
    #         | Literal
    # ------------------------------------------------------------------

    def _parse_primary(self) -> Node:
        if self.match("("):
            self.advance()
            expr = self._parse_expression()
            self.expect(")")
            return expr

        if self.match("{"):
            return self._parse_block()

        if self.match("["):
            return self._parse_array()

        if self.match_keyword("if"):
            return self._parse_if()

        if self.match_keyword("while"):
            return self._parse_while()

        if self.match_keyword("for"):
            return self._parse_for()

        return self._parse_literal()

    # ------------------------------------------------------------------
    # CallSuffix = "(" [ ArgumentList ] ")"
    #
    # children[0] = çağrılan ifade, children[1:] = argümanlar.
    # ------------------------------------------------------------------

    def _parse_call(self, callee: Node) -> Node:
        open_tok = self.expect("(")
        node     = Node(NodeType.CALL, open_tok)
        node.add(callee)

        if not self.match(")"):
            node.add(self._parse_expression())
            while self.match(","):
                self.advance()
                node.add(self._parse_expression())

        self.expect(")")
        return node

    # ------------------------------------------------------------------
    # MemberSuffix = "." IDENTIFIER
    # ------------------------------------------------------------------

    def _parse_member(self, obj: Node) -> Node:
        self.expect(".")
        tok = self.current()
        if tok is None or tok.type != TokenType.LITERAL_IDEN:
            raise ParseError("'.' sonrası üye adı beklendi", tok)
        self.advance()
        node = Node(NodeType.MEMBER, tok)
        node.add(obj)
        return node

    # ------------------------------------------------------------------
    # IndexSuffix = "[" Expression "]"
    # ------------------------------------------------------------------

    def _parse_index(self, obj: Node) -> Node:
        open_tok = self.expect("[")
        node     = Node(NodeType.INDEX, open_tok)
        node.add(obj)
        node.add(self._parse_expression())
        self.expect("]")
        return node

    # ------------------------------------------------------------------
    # ArrayLiteral = "[" [ Expression { "," Expression } [ "," ] ] "]"
    # ------------------------------------------------------------------

    def _parse_array(self) -> Node:
        open_tok = self.expect("[")
        node     = Node(NodeType.ARRAY, open_tok)

        while not self.match("]"):
            node.add(self._parse_expression())
            if self.match(","):
                self.advance()
            elif not self.match("]"):
                raise ParseError("Dizi elemanları arasında ',' beklendi",
                                 self.current())
        self.expect("]")
        return node

    # ------------------------------------------------------------------
    # IfExpr = "if" Expression Block [ "else" ( IfExpr | Block ) ]
    #
    # Değer döndürür: seçilen dalın blok değeri.
    # Koşul parantezsiz yazılabilir; gövde blok olmak zorundadır.
    # ------------------------------------------------------------------
